--- a/MPC/mpc.ipynb
+++ b/MPC/mpc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,38 +17,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n=2"
+    "n=5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pen = 0.1\n",
-    "a=0.9\n",
-    "b=0.1\n",
-    "t= 0.3\n",
-    "t_ref = 0.6*np.ones(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9975527572444604"
+       "0.6616579958930349"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,34 +55,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_min = 0.7\n",
+    "a_var = 0.3\n",
+    "\n",
+    "b_min = 0.1\n",
+    "b_var = 0.4\n",
+    "\n",
+    "r_min = 0.0\n",
+    "r_var = 1.0\n",
+    "\n",
+    "x_0_min = 0.0\n",
+    "x_0_var = 1.0\n",
+    "\n",
+    "x_ref_min = 0.0\n",
+    "x_ref_var = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(1000):\n",
-    "\tpen = 0.3*np.random.rand() + 0.1\n",
-    "\ta=0.4*np.random.rand() + 0.6\n",
-    "\tb=0.2*np.random.rand() +0.1\n",
-    "\tt=  np.random.rand()\n",
-    "\tt_ref = np.array([np.random.rand()]*(n))\n",
+    "\t\n",
+    "\ta=a_var*np.random.rand() + a_min\n",
+    "\tb=b_var*np.random.rand() + b_min\n",
+    "\tr = r_var*np.random.rand() + r_min\n",
+    "\tx_0=  x_0_var*np.random.rand() + x_0_min\n",
+    "\tx_ref = x_ref_var*np.array([np.random.rand()]*(n)) + x_ref_min\n",
+    "\t\n",
     "\n",
-    "\tQ = np.identity(n)\n",
-    "\tL = pen * np.identity(n)\n",
+    "\tL = r * np.identity(n)\n",
     "\tI = np.identity(n)\n",
     "\tA = np.array([a**(i+1) for i in range(n)])\n",
     "\tB = np.array([[a**(i-1) * b for i in range(j, 0, -1)] + [0]*(n-j) for j in range(1, n+1)])\n",
     "\n",
-    "\tx = cp.Variable(n)\n",
-    "\tconstraints = [x <= np.ones(n), -x <= np.zeros(n), (A*t +B@x) <= np.ones(n), -(A*t +B@x) <= np.zeros(n)]\n",
-    "\tprob = cp.Problem(cp.Minimize(cp.quad_form(A*t +B@x - t_ref, I) + cp.quad_form(x, L)), constraints)\n",
+    "\tu = cp.Variable(n)\n",
+    "\tconstraints = [u <= np.ones(n), -u <= np.zeros(n), (A*x_0 +B@u) <= np.ones(n), -(A*x_0 +B@u) <= np.zeros(n)]\n",
+    "\tprob = cp.Problem(cp.Minimize(cp.quad_form(A*x_0 +B@u - x_ref, I) + cp.quad_form(u, L)), constraints)\n",
     "\tprob.solve()\n",
-    "\tif prob.status == 'optimal': ds.append((np.array([t, t_ref[0]]), x.value))\n",
+    "\tif prob.status == 'optimal': ds.append([(a - a_min)/a_var, (b - b_min)/b_var, (r - r_min)/r_var, (x_0-x_0_min)/x_0_var, (x_ref[0]-x_ref_min)/x_ref_var, u.value])\n",
     "\t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pickle import dump\n",
+    "dump(ds, open(\"mpc.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = 0.01*np.random.rand() + 0.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.725948976566948"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(h - 0.9)/0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9202288972185162,\n",
+       " 0.15518107716736582,\n",
+       " 0.5385141780849052,\n",
+       " 0.5377646842039625,\n",
+       " 0.201663488626724,\n",
+       " array([-4.80585138e-23, -4.34888012e-23,  1.53503014e-23, -8.71038338e-24,\n",
+       "         5.95637922e-24])]"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.32147005, 0.29758109, 0.26733772, 0.22033252, 0.14038995])"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +199,7 @@
        "'optimal'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,36 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([8.54988195e-24, 3.57422224e-24])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sol = torch.tensor(x.value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,17 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from pickle import dump\n",
-    "dump(ds, open(\"mpc.pkl\", \"wb\"))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,49 +270,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
     "def kkt_loss(U, lambda_, mu, nu, rho, x_t, x_ref, a, b, q, r):\n",
-    "        U_min = 0.0\n",
-    "        U_max = 1.0\n",
-    "        T_min = 0.0\n",
-    "        T_max = 1.0\n",
+    "\t\tU_min = 0.0\n",
+    "\t\tU_max = 1.0\n",
+    "\t\tT_min = 0.0\n",
+    "\t\tT_max = 1.0\n",
     "\n",
-    "        # Violazione della stazionarietà\n",
-    "        grad_J = grad_cost(U, x_t, x_ref, a, b, q, r)\n",
-    "        grad_ineq_control = lambda_ - mu\n",
-    "        grad_ineq_state = -b * nu + b * rho\n",
-    "        stationarity_violation = (grad_J + grad_ineq_control + grad_ineq_state).pow(2).sum()\n",
+    "\t\t# Violazione della stazionarietà\n",
+    "\t\tgrad_J = grad_cost(U, x_t, x_ref, a, b, q, r)\n",
+    "\t\tgrad_ineq_control = lambda_ - mu\n",
+    "\t\tgrad_ineq_state = -b * nu + b * rho\n",
+    "\t\tstationarity_violation = (grad_J + grad_ineq_control + grad_ineq_state).pow(2).sum()\n",
     "\n",
-    "        # Violazione della primal feasibility (controlli e stati)\n",
-    "        control_feasibility = (torch.max(U_min - U, torch.zeros_like(U)) + torch.max(U - U_max, torch.zeros_like(U))).pow(2).sum()\n",
+    "\t\t# Violazione della primal feasibility (controlli e stati)\n",
+    "\t\tcontrol_feasibility = (torch.max(U_min - U, torch.zeros_like(U)) + torch.max(U - U_max, torch.zeros_like(U))).pow(2).sum()\n",
     "\n",
-    "        x = copy(x_t)\n",
-    "        state_feasibility = 0\n",
-    "        for k in range(n):\n",
-    "            U_t = U[..., k].squeeze()\n",
-    "            x = copy(a * x + b * U_t)\n",
-    "            state_feasibility += (torch.max(T_min - x, torch.zeros_like(x)) + torch.max(x - T_max, torch.zeros_like(x))).pow(2).sum()\n",
+    "\t\tx = copy(x_t)\n",
+    "\t\tstate_feasibility = 0\n",
+    "\t\tfor k in range(n):\n",
+    "\t\t\tU_t = U[..., k].squeeze()\n",
+    "\t\t\tx = copy(a * x + b * U_t)\n",
+    "\t\t\tstate_feasibility += (torch.max(T_min - x, torch.zeros_like(x)) + torch.max(x - T_max, torch.zeros_like(x))).pow(2).sum()\n",
     "\n",
-    "        # Violazione della complementarità\n",
-    "        comp_control = lambda_ * (U - U_min) + mu * (U_max - U)\n",
-    "        comp_state = 0\n",
-    "        x = copy(x_t)\n",
-    "        for k in range(n):\n",
-    "            U_t = U[k].squeeze()\n",
-    "            x_next = a * x + b * U_t\n",
-    "            nu_t = nu[k].squeeze()\n",
-    "            rho_t = rho[k].squeeze()\n",
-    "            comp_state += (nu_t * (T_min - x_next) + rho_t * (x_next - T_max)).pow(2).sum()\n",
-    "            x = copy(x_next)\n",
-    "        comp_loss = comp_control.pow(2).sum() + comp_state\n",
+    "\t\t# Violazione della complementarità\n",
+    "\t\tcomp_control = lambda_ * (U - U_min) + mu * (U_max - U)\n",
+    "\t\tcomp_state = 0\n",
+    "\t\tx = copy(x_t)\n",
+    "\t\tfor k in range(n):\n",
+    "\t\t\tU_t = U[k].squeeze()\n",
+    "\t\t\tx_next = a * x + b * U_t\n",
+    "\t\t\tnu_t = nu[k].squeeze()\n",
+    "\t\t\trho_t = rho[k].squeeze()\n",
+    "\t\t\tcomp_state += (nu_t * (T_min - x_next) + rho_t * (x_next - T_max)).pow(2).sum()\n",
+    "\t\t\tx = copy(x_next)\n",
+    "\t\tcomp_loss = comp_control.pow(2).sum() + comp_state\n",
     "\n",
-    "        # Violazione della dual feasibility\n",
+    "\t\t# Violazione della dual feasibility\n",
     "\n",
-    "        # Somma delle violazioni\n",
-    "        return grad_J, stationarity_violation, control_feasibility,state_feasibility,  comp_loss"
+    "\t\t# Somma delle violazioni\n",
+    "\t\treturn grad_J, stationarity_violation, control_feasibility,state_feasibility,  comp_loss"
    ]
   },
   {
@@ -261,22 +324,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor([0.0300, 0.0096], dtype=torch.float64),\n",
-       " tensor(0.0050, dtype=torch.float64),\n",
-       " tensor(0., dtype=torch.float64),\n",
-       " tensor(0., dtype=torch.float64),\n",
-       " tensor(1.0878e-49, dtype=torch.float64))"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sol' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[133], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kkt_loss(\u001b[43msol\u001b[49m, lambda_, mu, nu, rho, t, t_ref, a, b, torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;241m1\u001b[39m), pen)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sol' is not defined"
+     ]
     }
    ],
    "source": [
@@ -285,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0384, 0.0096], dtype=torch.float64)"
+       "tensor([0., 0., 0., 0., 0.], dtype=torch.float64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,16 +380,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([8.5499e-24, 3.5742e-24], dtype=torch.float64)"
+       "tensor([0.3827, 0.3616, 0.3281, 0.2713, 0.1726], dtype=torch.float64)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,16 +400,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0300, 0.0096], dtype=torch.float64)"
+       "tensor([1.0003e-01, 9.0769e-02, 7.5044e-02, 4.7745e-02, 4.8572e-17],\n",
+       "       dtype=torch.float64)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,16 +421,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.11350292824288229"
+       "0.17584272646532612"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,16 +441,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(8.5499e-24, dtype=torch.float64)"
+       "tensor(0.3827, dtype=torch.float64)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,16 +468,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.4159, dtype=torch.float64)"
+       "tensor(0.3484, dtype=torch.float64)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,16 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3356259775174736"
+       "0.4382834245890117"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
