--- a/ODE/MPC/mpc.ipynb
+++ b/ODE/MPC/mpc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.09255055551347569"
+       "0.15133666396337742"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
     "\ta=0.9\n",
     "\tb=0.1\n",
     "\tr = r_var*np.random.rand() + r_min\n",
-    "\tx_0=  0.2\n",
+    "\tx_0=  x_0_var*np.random.rand() + x_0_min\n",
     "\tx_ref = 0.1*np.array([np.random.rand()]*(n)) + 0.7\n",
     "\t\n",
     "\n",
@@ -99,13 +99,13 @@
     "\tconstraints = [u <= np.ones(n), -u <= np.zeros(n), (A*x_0 +B@u) <= np.ones(n), -(A*x_0 +B@u) <= np.zeros(n)]\n",
     "\tprob = cp.Problem(cp.Minimize(cp.quad_form(A*x_0 +B@u - x_ref, I) + cp.quad_form(u, L)), constraints)\n",
     "\tprob.solve()\n",
-    "\tif prob.status == 'optimal': ds.append([(r - r_min)/r_var, (x_ref[0]-x_ref_min)/x_ref_var, u.value])\n",
+    "\tif prob.status == 'optimal': ds.append([(r - r_min)/r_var, (x_0-x_0_min)/x_0_var, (x_ref[0]-x_ref_min)/x_ref_var, u.value])\n",
     "\t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.32460694533961165"
+       "0.6513486653710765"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,18 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.6269133857654965,\n",
-       " 0.15569389048741722,\n",
-       " array([0.97099407, 0.77942636, 0.60088011, 0.42117751, 0.22604899])]"
+       "[0.7712550212968466,\n",
+       " 0.9093277461111476,\n",
+       " 0.2634844733706021,\n",
+       " array([0.81814251, 0.66898224, 0.52365651, 0.37143429, 0.20107529])]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,16 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.88763555, 0.71734256, 0.55523684, 0.38972077, 0.20895275])"
+       "array([1.        , 1.        , 0.9314627 , 0.64182315, 0.34294526])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +196,7 @@
        "'optimal'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +331,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kkt_loss(\u001b[43msol\u001b[49m, lambda_, mu, nu, rho, t, t_ref, a, b, torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;241m1\u001b[39m), pen)\n",
+      "Cell \u001b[0;32mIn[76], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kkt_loss(\u001b[43msol\u001b[49m, lambda_, mu, nu, rho, t, t_ref, a, b, torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;241m1\u001b[39m), pen)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'sol' is not defined"
      ]
     }
