--- a/MPC/eval.ipynb
+++ b/MPC/eval.ipynb
@@ -17,6 +17,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([True])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.isclose(torch.tensor([1e-7]), torch.tensor([0.0]), atol=1e-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([False])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.isclose(torch.tensor([0.0]), torch.tensor([1e-7]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -112,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(torch.stack([a,b,r,x_0,x_ref, stationarity, feasibility, complementary], 1).cpu().detach(), columns=['a', 'b', 'r', 'x_0', 'x_ref', 'stat', 'feas', 'compl'])"
+    ", stationarity, feasibility, complementarydf = pd.DataFrame(torch.stack([a,b,r,x_0,x_ref], 1).cpu().detach(), columns=['a', 'b', 'r', 'x_0', 'x_ref', 'stat', 'feas', 'compl'])"
    ]
   },
   {
