--- a/MPC/mpc.ipynb
+++ b/MPC/mpc.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n=5"
+    "n=10"
    ]
   },
   {
@@ -99,7 +99,7 @@
     "\tconstraints = [u <= np.ones(n), -u <= np.zeros(n), (A*x_0 +B@u) <= np.ones(n), -(A*x_0 +B@u) <= np.zeros(n)]\n",
     "\tprob = cp.Problem(cp.Minimize(cp.quad_form(A*x_0 +B@u - x_ref, I) + cp.quad_form(u, L)), constraints)\n",
     "\tprob.solve()\n",
-    "\tif prob.status == 'optimal': ds.append([(a - a_min)/a_var, (b - b_min)/b_var, (r - r_min)/r_var, (x_0-x_0_min)/x_0_var, (x_ref[0]-x_ref_min)/x_ref_var, u.value])\n",
+    "\tif prob.status == 'optimal': ds.append([2*(a - a_min)/a_var -1, 2*(b - b_min)/b_var - 1, 2*(r - r_min)/r_var - 1, 2*(x_0-x_0_min)/x_0_var-1, 2*(x_ref[0]-x_ref_min)/x_ref_var -1, u.value])\n",
     "\t"
    ]
   },
