--- a/Projection/projection.ipynb
+++ b/Projection/projection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,12 @@
     "\n",
     "\tp_feas = x.value[0]\n",
     "\tq_feas = x.value[1]\n",
-    "\treturn p_feas, q_feas"
+    "\treturn p_feas, q_feas, prob.status"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,16 +73,17 @@
     "\tp_pot = np.random.rand() * p_max\n",
     "\tp = np.random.rand()\n",
     "\tq = 2*np.random.rand() - 1\n",
-    "\tp_feas, q_feas = loads(p, q, p_min, p_max, p_plus, p_pot, q_min, q_max, q_minus, q_plus)\n",
-    "\tX = np.array([p, q, p_pot, p_max, q_max, p_plus, q_plus])\n",
+    "\tp_feas, q_feas, status = loads(p, q, p_min, p_max, p_plus, p_pot, q_min, q_max, q_minus, q_plus)\n",
+    "\tX = np.array([2.*p-1., q, 2.*(p_pot/p_max)-1., 2.*(p_max - 0.2)/0.8 - 1., 2.*(q_max - 0.2)/0.8 -1., 2.*(p_plus - 0.1)/(0.9*p_max - 0.1) -1., 2*(q_plus - 0.1)/(0.9*q_max - 0.1) - 1.])\n",
     "\ty = np.array([p_feas, q_feas])\n",
     "\n",
-    "\tds.append([X, y]) "
+    "\tif status == 'optimal': ds.append([X, y])\n",
+    "\telse: print(\"Error\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,16 +106,39 @@
     "\tp_pot = np.random.rand() * p_max\n",
     "\tp = np.random.rand()\n",
     "\tq = 2*np.random.rand() - 1\n",
-    "\tp_feas, q_feas = loads(p, q, p_min, p_max, p_plus, p_pot, q_min, q_max, q_minus, q_plus)\n",
-    "\tX = np.array([p, q, p_pot, p_max, q_max, p_plus, q_plus,])\n",
+    "\tp_feas, q_feas, status = loads(p, q, p_min, p_max, p_plus, p_pot, q_min, q_max, q_minus, q_plus)\n",
+    "\tX = np.array([2.*p-1., q, 2.*(p_pot/p_max)-1., 2.*(p_max - 0.2)/0.8 - 1., 2.*(q_max - 0.2)/0.8 -1., 2.*(p_plus - 0.1)/(0.9*p_max - 0.1) -1., 2*(q_plus - 0.1)/(0.9*q_max - 0.1) - 1.])\n",
     "\ty = np.array([p_feas, q_feas])\n",
     "\n",
-    "\tds.append([X, y]) "
+    "\tif status == 'optimal':  ds.append([X, y])\n",
+    "\telse: print(\"Error\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([ 0.63868119,  0.85628106,  0.94805421, -0.75      , -0.75      ,\n",
+       "         0.17647059, -0.41176471]),\n",
+       " array([0.2, 0.3])]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
